--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "devDependencies": {
     "elm-review": "^2.10.3",
     "elm-watch": "^2.0.0-beta.2",
-    "travelm-agency": "^3.4.1"
+    "travelm-agency": "^3.4.1",
+    "uglify-js": "^3.17.4"
   },
   "scripts": {
     "start": "yarn elm-watch hot",
-    "build": "yarn elm-watch make",
+    "build": "yarn build:elm-audio && yarn build:translation && yarn elm-watch make",
+    "build:elm-audio": "yarn uglifyjs src/elm-audio-unminified.js --compress --mangle -o src/elm-audio.js",
     "build:translation": "rm -rf dist/i18n; yarn travelm-agency --i18n_arg_first translations --hash"
   }
 }
