Add type annotations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "checkJs": true,
     "outDir": "./dist/",
     "noImplicitAny": true,
     "module": "es6",
